[gd_scene load_steps=27 format=2]

[ext_resource path="res://WorldPlayer.tscn" type="PackedScene" id=1]
[ext_resource path="res://World.gd" type="Script" id=2]
[ext_resource path="res://gfx/world/mapTile_188.png" type="Texture" id=3]
[ext_resource path="res://TileMap.tscn" type="PackedScene" id=4]
[ext_resource path="res://monsters/Monster5.tscn" type="PackedScene" id=17]
[ext_resource path="res://monsters/Monster6.tscn" type="PackedScene" id=18]
[ext_resource path="res://monsters/Monster2.tscn" type="PackedScene" id=19]
[ext_resource path="res://monsters/Monster7.tscn" type="PackedScene" id=20]
[ext_resource path="res://monsters/Monster8.tscn" type="PackedScene" id=21]
[ext_resource path="res://monsters/Monster9.tscn" type="PackedScene" id=22]
[ext_resource path="res://monsters/Monster0.tscn" type="PackedScene" id=23]
[ext_resource path="res://monsters/Monster4.tscn" type="PackedScene" id=24]
[ext_resource path="res://monsters/Monster1.tscn" type="PackedScene" id=25]
[ext_resource path="res://monsters/Monster3.tscn" type="PackedScene" id=26]
[ext_resource path="res://gfx/ui/panel_beige_right.png" type="Texture" id=27]
[ext_resource path="res://gfx/ui/panel_beige_middle.png" type="Texture" id=28]
[ext_resource path="res://gfx/ui/panel_beige_left.png" type="Texture" id=29]
[ext_resource path="res://font/HARLOWSI.TTF" type="DynamicFontData" id=30]
[ext_resource path="res://DialogBox.gd" type="Script" id=31]
[ext_resource path="res://words/WorldWord.tscn" type="PackedScene" id=32]
[ext_resource path="res://RhymeBattle.tscn" type="PackedScene" id=33]
[ext_resource path="res://sound/Outdoor_Ambiance.mp3" type="AudioStream" id=34]
[ext_resource path="res://sound/perfect.wav" type="AudioStream" id=35]

[sub_resource type="Shader" id=27]
code = "shader_type canvas_item;

uniform sampler2D wave : hint_albedo;

vec2 tile(vec2 _st, float _zoom)
{
    _st *= _zoom;
    return fract(_st);
}

void fragment()
{
	vec2 st = vec2(UV.x, UV.y);
	vec3 color = vec3(0.0);
	st = tile(st, 1.0);
	color += texture(wave, vec2(st.x + TIME * 0.02, st.y + 0.2 + sin(TIME * 1.5) * 0.06)).rgb;
	COLOR = vec4(color,1.0);
}"

[sub_resource type="ShaderMaterial" id=23]
shader = SubResource( 27 )
shader_param/wave = ExtResource( 3 )

[sub_resource type="DynamicFont" id=26]
size = 20
outline_size = 2
outline_color = Color( 0.0862745, 0.0862745, 0.0862745, 1 )
font_data = ExtResource( 30 )

[node name="World" type="Node2D"]
script = ExtResource( 2 )
BattleScene = ExtResource( 33 )

[node name="Water" type="TextureRect" parent="."]
material = SubResource( 23 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -259.0
margin_top = -241.0
margin_right = 2060.0
margin_bottom = 1434.0
texture = ExtResource( 3 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TileMap" parent="." instance=ExtResource( 4 )]

[node name="words" type="Node2D" parent="."]

[node name="WorldWord1" parent="words" instance=ExtResource( 32 )]
position = Vector2( 247, 122 )
form = "crystal"
word = "touch"

[node name="WorldWord2" parent="words" instance=ExtResource( 32 )]
position = Vector2( 359, 246 )
form = "tower"
word = "above"

[node name="WorldWord3" parent="words" instance=ExtResource( 32 )]
position = Vector2( 440, 371 )
form = "library"
word = "give"

[node name="WorldWord4" parent="words" instance=ExtResource( 32 )]
position = Vector2( 329, 484 )
form = "tomb"
word = "apart"

[node name="WorldWord5" parent="words" instance=ExtResource( 32 )]
position = Vector2( 313, 748 )
form = "crystal"
word = "track"

[node name="WorldWord6" parent="words" instance=ExtResource( 32 )]
position = Vector2( 561, 696 )
form = "tower"
word = "breath"

[node name="WorldWord7" parent="words" instance=ExtResource( 32 )]
position = Vector2( 554, 983 )
form = "library"
word = "wife"

[node name="WorldWord8" parent="words" instance=ExtResource( 32 )]
position = Vector2( 1001, 967 )
form = "tomb"
word = "then"

[node name="WorldWord9" parent="words" instance=ExtResource( 32 )]
position = Vector2( 889, 767 )
form = "crystal"
word = "past"

[node name="WorldWord10" parent="words" instance=ExtResource( 32 )]
position = Vector2( 1084, 477 )
form = "tower"
word = "desire"

[node name="WorldWord11" parent="words" instance=ExtResource( 32 )]
position = Vector2( 1284, 194 )
form = "library"
word = "while"

[node name="WorldWord12" parent="words" instance=ExtResource( 32 )]
position = Vector2( 1529, 378 )
form = "tomb"
word = "walk"

[node name="WorldWord13" parent="words" instance=ExtResource( 32 )]
position = Vector2( 1715, 131 )
form = "crystal"
word = "town"

[node name="WorldWord14" parent="words" instance=ExtResource( 32 )]
position = Vector2( 1731, 434 )
form = "tower"
word = "voice"

[node name="WorldWord15" parent="words" instance=ExtResource( 32 )]
position = Vector2( 1785, 760 )
form = "library"
word = "kiss"

[node name="WorldWord16" parent="words" instance=ExtResource( 32 )]
position = Vector2( 1538, 848 )
form = "tomb"
word = "shine"

[node name="WorldWord17" parent="words" instance=ExtResource( 32 )]
position = Vector2( 826, 1090 )
form = "crystal"
word = "word"

[node name="WorldWord18" parent="words" instance=ExtResource( 32 )]
position = Vector2( 256, 1079 )
form = "tower"
word = "stand"

[node name="WorldWord19" parent="words" instance=ExtResource( 32 )]
position = Vector2( 1275, 334 )
form = "library"
word = "child"

[node name="WorldWord20" parent="words" instance=ExtResource( 32 )]
position = Vector2( 1504, 121 )
form = "tomb"
word = "crime"

[node name="monsters" type="Node2D" parent="."]

[node name="Monster" parent="monsters" instance=ExtResource( 23 )]
position = Vector2( 1678, 866 )

[node name="Monster2" parent="monsters" instance=ExtResource( 25 )]
position = Vector2( 1696, 560 )

[node name="Monster3" parent="monsters" instance=ExtResource( 19 )]
position = Vector2( 1636, 219 )

[node name="Monster4" parent="monsters" instance=ExtResource( 26 )]
position = Vector2( 1304, 372 )

[node name="Monster5" parent="monsters" instance=ExtResource( 24 )]
position = Vector2( 965, 827 )

[node name="Monster6" parent="monsters" instance=ExtResource( 17 )]
position = Vector2( 773, 1028 )

[node name="Monster7" parent="monsters" instance=ExtResource( 18 )]
position = Vector2( 153, 926 )

[node name="Monster8" parent="monsters" instance=ExtResource( 20 )]
position = Vector2( 473, 770 )

[node name="Monster9" parent="monsters" instance=ExtResource( 21 )]
position = Vector2( 380, 613 )

[node name="Monster10" parent="monsters" instance=ExtResource( 22 )]
position = Vector2( 283, 196 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 363, 141 )

[node name="Camera2D" type="Camera2D" parent="Player"]
current = true
zoom = Vector2( 0.7, 0.7 )

[node name="DialogBox" type="Control" parent="Player/Camera2D"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -214.0
margin_top = 89.0
margin_right = -214.0
margin_bottom = 89.0
script = ExtResource( 31 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Player/Camera2D/DialogBox"]
margin_right = 40.0
margin_bottom = 40.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="Player/Camera2D/DialogBox/HBoxContainer"]
margin_right = 27.0
margin_bottom = 100.0
texture = ExtResource( 29 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Player/Camera2D/DialogBox/HBoxContainer"]
margin_left = 27.0
margin_right = 100.0
margin_bottom = 100.0
texture = ExtResource( 28 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect4" type="TextureRect" parent="Player/Camera2D/DialogBox/HBoxContainer"]
margin_left = 100.0
margin_right = 173.0
margin_bottom = 100.0
texture = ExtResource( 28 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect5" type="TextureRect" parent="Player/Camera2D/DialogBox/HBoxContainer"]
margin_left = 173.0
margin_right = 246.0
margin_bottom = 100.0
texture = ExtResource( 28 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect6" type="TextureRect" parent="Player/Camera2D/DialogBox/HBoxContainer"]
margin_left = 246.0
margin_right = 319.0
margin_bottom = 100.0
texture = ExtResource( 28 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect7" type="TextureRect" parent="Player/Camera2D/DialogBox/HBoxContainer"]
margin_left = 319.0
margin_right = 392.0
margin_bottom = 100.0
texture = ExtResource( 28 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect3" type="TextureRect" parent="Player/Camera2D/DialogBox/HBoxContainer"]
margin_left = 392.0
margin_right = 414.0
margin_bottom = 100.0
texture = ExtResource( 27 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Player/Camera2D/DialogBox"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 15.0
margin_top = 12.0
margin_right = 399.0
margin_bottom = 67.0
custom_fonts/font = SubResource( 26 )
text = "As you gaze into the crystal, a word forms in your mind:"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Player/Camera2D/DialogBox"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 7.0
margin_top = 69.0
margin_right = 401.0
margin_bottom = 95.0
custom_colors/font_color = Color( 0.156863, 0.627451, 0.792157, 1 )
custom_fonts/font = SubResource( 26 )
text = "heart"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CameraTween" type="Tween" parent="."]

[node name="OutdoorAmbience" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 34 )
autoplay = true

[node name="WordCollectedSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 35 )
